--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
       <div class="copy-container">
         <h1>Assalamu'alaikum<span>.</span></h1>
         <h2>Selamat datang di portfolio saya!</h2>
-        <img src="images/profil.png" alt="Ninja Ken">
+        <img src="images/profil.png" alt="Endah">
       </div>
       
       <div class="about">
