--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       <div class="header-list">
         <ul>
           <li><a href="#about-link">Tentang Saya</a></li>
-          <li><a href="#work-link">Proyek Contoh</a></li>
+          <li><a href="#work-link">Project</a></li>
           <li><a href="#contact-link">Hubungi Saya</a></li>
         </ul>
       </div>
@@ -26,11 +26,11 @@
       
       <div class="about">
         <h3><a id="about-link">Tentang Saya</a></h3>
-        <p>Nama saya Endah Fitria Ningsih. Seorang web developer pemula yang masih terus belajar. Saat ini saya masih berkuliah di suatu Universitas Swasta di Indonesia. Saya berharap teman-teman semua dalam keadaan sehat dan senantiasa dalam kebaikan. Barakallahu fiikum</p>
+        <p>Nama saya Endah Fitria Ningsih. Seorang pemula yang masih terus belajar. Saat ini saya aktif mengikuti pelatihan online mengenai bahasa pemrogramman. Saya berharap teman-teman semua dalam keadaan sehat dan senantiasa dalam kebaikan. Barakallahu fiikum</p>
       </div>
 
       <div class="contents">
-        <h3><a id="work-link">Proyek Contoh</a></h3>
+        <h3><a id="work-link">Project</a></h3>
         <div class="contents-item">
           <img src="images/1.png">
           <p>Image 1</p>
