--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
       
       <div class="about">
         <h3><a id="about-link">Tentang Saya</a></h3>
-        <p>Nama saya Endah Fitria Ningsih. Seorang pemula yang masih terus belajar. Saat ini saya aktif mengikuti pelatihan online mengenai bahasa pemrogramman. Saya berharap teman-teman semua dalam keadaan sehat dan senantiasa dalam kebaikan. Barakallahu fiikum</p>
+        <p>Nama saya Endah Fitria Ningsih. Seorang pemula yang masih terus belajar. Saat ini saya aktif mengikuti pelatihan online mengenai bahasa pemrograman. Saya berharap teman-teman semua dalam keadaan sehat dan senantiasa dalam kebaikan. Barakallahu fiikum</p>
       </div>
 
       <div class="contents">
